+ added & updated registration tests

--- a/.env.local
+++ b/.env.local
@@ -1,4 +1,4 @@
-USER_PASSWORD = 'Test1234'
-USER_NAME = 'test@nopcommerce.com'
+USER_EMAIL_FAIL = 'test@nopcommerce.com'
+USER_EMAIL_SUCCESS = 'test@nopcommerce.com'
 FIRST_NAME = 'TestFirstName'
 LAST_NAME = 'TestLastName'
